--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <!-- ABOUT -->
       <section>
-        <h2 hidden>Our benefits</h2>
+        <h2 class="visually-hidden">Our benefits</h2>
         <ul class="about-list list">
           <li class="about-items">
             <h3 class="subtitle">Strategy</h3>
