--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <header class="page-header">
       <nav class="header-navigation">
         <a href="/" class="header-logo-beginning link"
-          >WEB<span class="header-logo-end link">STUDIO</span></a
+          >Web<span class="header-logo-end link">Studio</span></a
         >
         <ul class="site-nav list">
           <li class="site-nav-items">
@@ -52,6 +52,7 @@
     <!-- MAIN -->
     <main>
       <section class="portfolio">
+        <h2 class="visually-hidden">Portfolio</h2>
         <ul class="filter-list list">
           <li class="filter-item">
             <button type="button" class="filter-btn cursor">All</button>
