--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="page-header">
       <nav class="header-navigation">
         <a href="/" class="header-logo-beginning link"
-          >WEB<span class="header-logo-end link">STUDIO</span></a
+          >Web<span class="header-logo-end link">Studio</span></a
         >
         <ul class="site-nav list">
           <li class="site-nav-items">
@@ -123,12 +123,12 @@
       <section class="team">
         <h2 class="second-title">Our Team</h2>
         <ul class="team-list list">
-          <li class="team-item">
+          <li class="team-item team-list-color">
             <img src="./images/team1.jpg" alt="Product Designer" width="264" />
             <h3 class="subtitle">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li class="team-item">
+          <li class="team-item team-list-color">
             <img
               src="./images/team3.jpg"
               alt="Frontend Developer"
@@ -137,12 +137,12 @@
             <h3 class="subtitle">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li class="team-item">
+          <li class="team-item team-list-color">
             <img src="./images/team4.jpg" alt="Marketing" width="264" />
             <h3 class="subtitle">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li class="team-item">
+          <li class="team-item team-list-color">
             <img src="./images/team2.jpg" alt="UI Designer" width="264" />
             <h3 class="subtitle">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
